# SynGen-ai

./: .env.example  .gitignore  README.md  SUMMARY.md  TODO.txt  doit.md  file_st.py  fix_db_connections.py  full_app_run.sh  initialize_mongodb.py  load_data.py  load_documents.py  pdf.txt  postman_guide.md  pyproject.toml  requirements.txt  start_application.bat  start_application.sh  test_all_endpoints.py  test_questions.py  test_results.json  z_api_checker.py
Backend/: app.py  database_setup.py  main_app.py  postgres_setup.py  test_real_questions.py
Backend/application/: models.py
Backend/config/: settings.py
Backend/core/: logging.py  security.py
Backend/data/documents/: Anti-Counterfeit and Product Authenticity Policy.json  COC.json  Circular Economy.json  Communication and Crisis Management Policy for DataCo Global.json  Continuous Improvement.json  Cost Reduction.json  Data Security.json  DataCo Global Capacity Planning Policy.json  DataCo Global Contract Management and Negotiation Policy.json  DataCo Global Warehouse and Storage Policy.json  Dataco Global Change Management Policy for Supply Chain Processes.json  Dataco Global Order Management Policy.json  Dataco Global Transportation and Logistics Policy.json  Dataco Global_ Demand Forecasting and Planning Policy.json  Environmental Sustainability.json  Global Returns.json  (+16 more)
Backend/feature/: feature.md  txt_to_sql.py
Backend/templates/: sql_templates.py
Frontend/: notes.md
Frontend/ai-agent-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+31 files in other folders)
