[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syngen-ai"
version = "1.0.0"
description = "SynGen AI - Advanced Supply Chain Analytics Platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "motor>=3.3.2",
    "pymongo>=4.6.0",
    "pandas>=2.1.4",
    "pydantic>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.1",
    "redis>=5.0.1",
    "agno>=1.0.0",
    "google-genai>=1.0.0",
    "sqlglot>=18.0.0",
    "tenacity>=8.0.0",
    "ollama>=0.1.0",
    "email-validator>=2.0.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]

[tool.pytest.ini_options]
testpaths = ["Backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["Backend"]

[tool.setuptools.packages.find]
where = ["."]
include = ["Backend", "Backend.*"]
exclude = ["Frontend", "Frontend.*"]